manifests/traefik-service/traefik-dashboard-ingress-kpi09.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    helm.sh/hook: post-install,post-upgrade
  creationTimestamp: "2022-10-23T11:21:14Z"
  generation: 2
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-10.19.300
  name: traefik-dashboard
  namespace: kube-system
  resourceVersion: "11839"
  uid: 4a28276f-e6e2-449a-9edb-2a77900620dc
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: PathPrefix(`/dashboard`) || PathPrefix(`/api`)
    services:
    - kind: TraefikService
      name: api@internal
