manifests/traefik-service/traefik-svc-dietpi.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: traefik
    meta.helm.sh/release-namespace: kube-system
#  creationTimestamp: "2022-10-31T21:46:30Z"
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-12.0.000
  name: traefik
  namespace: kube-system
#  resourceVersion: "1072"
# uid: cb479828-7dd6-4263-96ca-091ada623ac8
spec:
  allocateLoadBalancerNodePorts: true
#  clusterIP: 10.43.105.158
#  clusterIPs:
#  - 10.43.105.158
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: PreferDualStack
  ports:
  - name: web
#    nodePort: 31042
    port: 80
    protocol: TCP
    targetPort: web
  - name: websecure
#    nodePort: 31342
    port: 443
    protocol: TCP
    targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  sessionAffinity: None
  type: LoadBalancer
  loadBalancerIP: 192.168.1.29
