manifests/traefik-service/traefik-svc-kpi09.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: traefik
    meta.helm.sh/release-namespace: kube-system
  creationTimestamp: "2022-10-23T11:21:14Z"
  labels:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-10.19.300
  name: traefik
  namespace: kube-system
#  resourceVersion: "6262"
#  uid: c3ddbd9d-678a-4c1e-84b4-10e0927b8203
spec:
  allocateLoadBalancerNodePorts: true
#  clusterIP: 10.43.42.129
#  clusterIPs:
#  - 10.43.42.129
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: PreferDualStack
  ports:
  - name: web
#    nodePort: 31446
    port: 80
    protocol: TCP
    targetPort: web
  - name: websecure
#    nodePort: 31051
    port: 443
    protocol: TCP
    targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik
    app.kubernetes.io/name: traefik
  sessionAffinity: None
  type: LoadBalancer
  loadBalancerIP: 192.168.1.109
