manifests/traefik-service/traefik-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"meta.helm.sh/release-name":"traefik","meta.helm.sh/release-namespace":"kube-system","metallb.universe.tf/ip-allocated-from-pool":"first-pool"},"creationTimestamp":"2023-03-05T20:19:39Z","labels":{"app.kubernetes.io/instance":"traefik-kube-system","app.kubernetes.io/managed-by":"Helm","app.kubernetes.io/name":"traefik","helm.sh/chart":"traefik-20.3.1_up20.3.0"},"name":"traefik","namespace":"kube-system","resourceVersion":"10042 [...]
    meta.helm.sh/release-name: traefik
    meta.helm.sh/release-namespace: kube-system
    metallb.universe.tf/ip-allocated-from-pool: first-pool
  creationTimestamp: "2023-03-05T20:19:39Z"
  labels:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-20.3.1_up20.3.0
  name: traefik
  namespace: kube-system
  resourceVersion: "10937"
  uid: e1d3d5bf-3f56-454c-99f0-90f58d8a6b59
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.43.24.141
  clusterIPs:
  - 10.43.24.141
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: PreferDualStack
  ports:
  - name: web
    nodePort: 30100
    port: 80
    protocol: TCP
    targetPort: web
  - name: websecure
    nodePort: 30490
    port: 443
    protocol: TCP
    targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik-kube-system
    app.kubernetes.io/name: traefik
  sessionAffinity: None
  type: LoadBalancer
  loadBalancerIP: 192.168.1.84
